Fix package.json and dependencies

--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "mysoundapp-server",
   "version": "1.0.0",
-  "description": "",
-  "main": "Data.js",
+  "description": "Express backend for MySound app",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "repository": {
@@ -20,7 +19,6 @@
   "homepage": "https://github.com/rezzieomoigui/mysoundapp-server#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "scripts": "^0.1.0"
+    "express": "^4.18.2"
   }
 }
