--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "joi": "^17.13.3"
+    "joi": "^17.13.3",
+    "mongoose": "^8.16.0",
+    "multer": "^2.0.1"
   }
 }
