--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/rezzieomoigui/mysoundapp-server#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
     "joi": "^17.13.3",
     "mongoose": "^8.16.0",
-    "multer": "^2.0.1"
+    "multer": "^2.0.1",
+    "path": "^0.12.7"
   }
 }
