--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "joi": "^17.13.3",
+    "mongodb": "^6.17.0",
     "mongoose": "^8.16.0",
     "multer": "^2.0.1",
     "path": "^0.12.7"
